--- a/styles.css
+++ b/styles.css
@@ -988,7 +988,7 @@ body {
 
 .gallery-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(10, 1fr);
   gap: 5px;
   width: 100%;
   margin: 0;
@@ -1079,5 +1079,9 @@ body {
 @media screen and (max-width: 768px) {
   .gallery-container {
     max-width: 400px;
+  }
+
+  .gallery-grid {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
