feat(mobile): Ajustement du featured-release à 300px en version mobile uniquement

--- a/styles.css
+++ b/styles.css
@@ -701,7 +701,14 @@ body {
   }
 
   .featured-release {
-    display: none;
+    width: 300px;
+    margin: 0 auto;
+    display: block;
+  }
+
+  .featured-release iframe {
+    width: 300px !important;
+    height: 166px !important;
   }
 
   .releases-container {
